[gd_scene load_steps=19 format=2]

[ext_resource path="res://PlayerSprites/tile003.png" type="Texture" id=1]
[ext_resource path="res://PlayerSprites/tile001.png" type="Texture" id=2]
[ext_resource path="res://PlayerSprites/tile005.png" type="Texture" id=3]
[ext_resource path="res://PlayerSprites/tile000.png" type="Texture" id=4]
[ext_resource path="res://PlayerSprites/tile002.png" type="Texture" id=5]
[ext_resource path="res://PlayerSprites/tile006.png" type="Texture" id=6]
[ext_resource path="res://Scenes/OtherStuff/MobileControlls.tscn" type="PackedScene" id=7]
[ext_resource path="res://PlayerSprites/tile004.png" type="Texture" id=8]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=9]
[ext_resource path="res://Scenes/OtherStuff/trail.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.63603
height = 6.36407

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 0.292969, 0.292969, 0.292969, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.12
initial_velocity_random = 1.0
angular_velocity = 50.49
angular_velocity_random = 0.41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.0
scale_random = 1.0
color_ramp = SubResource( 5 )
hue_variation = 1.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.52868, 5.51458 )

[sub_resource type="OccluderPolygon2D" id=8]
cull_mode = 1
polygon = PoolVector2Array( -7.33678, 9.85698, -5.41651, -9.08092, 4.11866, -8.88227, 8.75381, 9.9232 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="Particles2D2" parent="." instance=ExtResource( 10 )]

[node name="RayCast" type="Node2D" parent="."]
visible = false

[node name="Left" type="RayCast2D" parent="RayCast"]
visible = false
enabled = true
cast_to = Vector2( -10, 0 )

[node name="Right" type="RayCast2D" parent="RayCast"]
visible = false
enabled = true
cast_to = Vector2( 10, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -1.27778, -1.72985 )
frames = SubResource( 2 )
animation = "Jump"
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
rotating = true
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Colision" type="CollisionShape2D" parent="."]
position = Vector2( -1.31829, 1.17677 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 50
speed_scale = 1.92
explosiveness = 1.0
process_material = SubResource( 6 )

[node name="MobileControlls" parent="." instance=ExtResource( 7 )]
light_mask = 524288

[node name="NextLevel" type="Sprite" parent="."]
visible = false
position = Vector2( -0.393898, -2.01325 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.116, 4.495 )
shape = SubResource( 7 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 8 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
